--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pdf-merger",
+  "name": "image-to-pdf",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -17,7 +17,6 @@
   "devDependencies": {
     "@types/lodash": "^4.14.198",
     "@types/pluralize": "^0.0.32",
-    "@types/sortablejs": "^1.15.4",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
     "eslint": "^8.49.0",
@@ -30,9 +29,9 @@
     "vite-tsconfig-paths": "^4.2.0"
   },
   "dependencies": {
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
-    "pdf-lib": "^1.17.1",
-    "sortablejs": "^1.15.0",
     "vanjs-core": "^1.2.1"
   }
 }
