working image preview

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "html2canvas": "^1.4.1",
+    "image-ops": "^1.0.7",
     "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
     "vanjs-core": "^1.2.1"
